# Project

verbov-client/: CMakeLists.txt  EventListItem.h  api.cpp  api.h  enrolldialog.cpp  enrolldialog.h  enrolldialog.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  participantsdialog.cpp  participantsdialog.h  participantsdialog.ui
verbov-server/: CMakeLists.txt  main.cpp  notifications.cpp  vk.cpp  vk.h
verbov-server/DB/: event.cpp  event.h  eventparticipant.cpp  eventparticipant.h  session.cpp  session.h  user.cpp  user.h
